# ambix

./: .deploy-documentation.sh  .deploy-doxygen.sh  .gitignore  .travis.yml  AUTHORS  BUGS  CHANGELOG  CONTRIBUTING.md  Makefile  Makefile.am  NEWS  README  README.md  TODO  ax-help-help.pd  ax-help.pd  ax.c  ax.h  ax_read~-help.pd  ax_test.pd  configure.ac  coverage.sh  release.sh  start.sh
doc/: Makefile.am  libambix.doxy  libambix.h  libambix.incl
libambix/: Makefile.am  configure.ac  libambix.c  libambix.doxy  libambix.pc.in  matrix.c  sndfile.c  utils.c  uuid_chunk.c
libambix/ambix/: ambix.h  exportdefs.h  matrix.h  private.h  types.h  utils.h
libambix/src/: Makefile.am  adaptor.c  adaptor_acn.c  adaptor_fuma.c  coreaudio.m  libambix.c  marker_region_chunk.c  matrix.c  matrix_invert.c  null.c  private.h  sndfile.c  utils.c  uuid_chunk.c
libambix/tests/: .gitignore  Makefile.am  ambix_close.c  ambix_extended.c  ambix_get_sndfile.c  ambix_none.c  ambix_open.c  ambix_readf_int16.c  ambix_seek.c  ambix_seek_read.c  ambix_simple.c  ambix_writef_int16.c  basic2extended_FUMA4x4_3extra_float32.c  basic2extended_FUMA4x4_3extra_float64.c  basic2extended_FUMA4x4_3extra_pcm16.c  basic2extended_FUMA4x4_3extra_pcm32.c  basic2extended_FUMA4x4_float32.c  basic2extended_FUMA4x4_float64.c  basic2extended_FUMA4x4_pcm16.c  basic2extended_FUMA4x4_pcm32.c  basic2extended_N3D4x4_3extra_float32.c  basic2extended_N3D4x4_3extra_float64.c  basic2extended_N3D4x4_3extra_pcm16.c  basic2extended_N3D4x4_3extra_pcm32.c  basic2extended_N3D4x4_float32.c  basic2extended_N3D4x4_float64.c  basic2extended_N3D4x4_pcm16.c  basic2extended_N3D4x4_pcm32.c  basic2extended_SID4x4_3extra_float32.c  basic2extended_SID4x4_3extra_float64.c  basic2extended_SID4x4_3extra_pcm16.c  basic2extended_SID4x4_3extra_pcm32.c  basic2extended_SID4x4_float32.c  basic2extended_SID4x4_float64.c  basic2extended_SID4x4_pcm16.c  basic2extended_SID4x4_pcm32.c  basic2extended_float32_1024.c  basic2extended_identity4x4_3extra_float32.c  basic2extended_identity4x4_3extra_float64.c  basic2extended_identity4x4_3extra_pcm16.c  (+65 more)
libambix/tests/data/: Makefile.am  file1.caf  foo.pd
libambix/utils/: Makefile.am  ambix_info.c  ambix_interleave.c  ambix_test.c
m4/: iem_check_framework.m4  iem_operatingsystem.m4  iem_rte.m4  pkg.m4
pd/: Makefile.am  ambix_info-help.pd  ambix_info.c  ambix_readX~-help.pd  ambix_read~.c  ambix_write~-help.pd  ambix_write~.c  ax-help.c  ax_read~.c  ax_write~-help.pd  winhacks.c  winhacks.h
pd/old/: Makefile.kr  ambix.h  ax-meta.pd  ax_test_cube.pd  ax_write~.c
replacement/: Makefile.am  strndup.h
samples/: Makefile.am
samples/pd/: Makefile.am  ambix-meta.pd.in  ambix_info.c  ambix_readX~-help.pd  ambix_read~-help.pd  ambix_read~.c  ambix_write~-help.pd  ambix_write~.c  winhacks.c
utils/: Makefile.am  README.txt  ambix-deinterleave.c  ambix-dump.c  ambix-info.c  ambix-interleave.c  ambix-jplay.c  ambix-jrecord.c  ambix-matrix.c  ambix-test.c  ambix_deinterleave.c  ambix_info.c  ambix_interleave.c  ambix_test.c
utils/jcommon/: Makefile.am  common.c  common.h  jack-ringbuffer.c  jack-ringbuffer.h  observe-signal.c  observe-signal.h
